tests/ui/feature-gates/feature-gate-impl_trait_in_fn_trait_return.stderr
error[E0562]: `impl Trait` only allowed in function and inherent method return types, not in `Fn` trait return types
  --> $DIR/feature-gate-impl_trait_in_fn_trait_return.rs:1:24
   |
LL | fn f() -> impl Fn() -> impl Sized { || () }
   |                        ^^^^^^^^^^
   |
   = note: see issue #99697 <https://github.com/rust-lang/rust/issues/99697> for more information
   = help: add `#![feature(impl_trait_in_fn_trait_return)]` to the crate attributes to enable

error[E0562]: `impl Trait` only allowed in function and inherent method return types, not in `Fn` trait return types
  --> $DIR/feature-gate-impl_trait_in_fn_trait_return.rs:3:32
   |
LL | fn g() -> &'static dyn Fn() -> impl Sized { &|| () }
   |                                ^^^^^^^^^^
   |
   = note: see issue #99697 <https://github.com/rust-lang/rust/issues/99697> for more information
   = help: add `#![feature(impl_trait_in_fn_trait_return)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0562`.
